# AsterForge

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh.md  SECURITY.md  build.rs  cargo-generate.toml  config.example.toml  docker-compose.yml  init.sh
.cargo/: audit.toml
.github/DISCUSSION_TEMPLATE/: qa.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
.github/workflows/: audit.yml  docker-image.yml  frontend.yml  performance.yml  rust-release.yml  rust.yml  vitepress.yml
crates/aster_forge_actix_middleware/: Cargo.toml
crates/aster_forge_actix_middleware/src/: client_ip.rs  cors.rs  csrf.rs  lib.rs  metrics.rs  rate_limit.rs  request_id.rs  security_headers.rs
crates/aster_forge_actix_observability/: Cargo.toml
crates/aster_forge_actix_observability/src/: lib.rs
crates/aster_forge_alloc/: Cargo.toml
crates/aster_forge_alloc/src/: lib.rs
crates/aster_forge_api/: Cargo.toml
crates/aster_forge_api/src/: lib.rs
crates/aster_forge_api_docs_macros/: Cargo.toml
crates/aster_forge_api_docs_macros/src/: lib.rs
crates/aster_forge_api_docs_macros/tests/: path.rs
crates/aster_forge_audit/: Cargo.toml
crates/aster_forge_audit/src/: db_writer.rs  lib.rs
crates/aster_forge_cache/: Cargo.toml
crates/aster_forge_cache/benches/: cache.rs
crates/aster_forge_cache/src/: bloom.rs  health.rs  lib.rs  memory.rs  redis_cache.rs  reservation.rs
crates/aster_forge_cache/tests/: cache.rs  redis_container.rs
crates/aster_forge_config/: Cargo.toml
crates/aster_forge_config/src/: avatar.rs  error.rs  lib.rs  notification.rs  registry.rs  runtime.rs  value.rs
crates/aster_forge_config/src/notification/: config.rs  message.rs  mod.rs  notifier.rs  runtime.rs  supervisor.rs  tests.rs
crates/aster_forge_config/tests/: redis_config_sync.rs
crates/aster_forge_crypto/: Cargo.toml
crates/aster_forge_crypto/src/: hash.rs  lib.rs
crates/aster_forge_db/: Cargo.toml
crates/aster_forge_db/src/: audit_log.rs  component.rs  connection.rs  index.rs  lib.rs  mail_outbox.rs  pagination.rs  retry.rs  runtime_lease.rs  scheduled_task.rs  search_query.rs  sort.rs  system_config.rs  transaction.rs
crates/aster_forge_db/tests/: sqlite.rs
crates/aster_forge_events/: Cargo.toml
crates/aster_forge_events/src/: lib.rs  redis_transport.rs  supervisor.rs  transient_bus.rs
crates/aster_forge_events/tests/: redis_event_bus.rs
crates/aster_forge_external_auth/: Cargo.toml
crates/aster_forge_external_auth/src/: driver.rs  error.rs  lib.rs  normalize.rs  registry.rs  types.rs
crates/aster_forge_external_auth/src/providers/: github.rs  google.rs  microsoft.rs  mod.rs  oauth2.rs  oidc.rs  qq.rs
crates/aster_forge_external_auth/tests/: registry.rs
crates/aster_forge_file_classification/: Cargo.toml
crates/aster_forge_file_classification/src/: lib.rs
crates/aster_forge_logging/: Cargo.toml
crates/aster_forge_logging/src/: lib.rs
crates/aster_forge_mail/: Cargo.toml
crates/aster_forge_mail/src/: component.rs  config.rs  lib.rs  message.rs  outbox.rs  sender.rs  template.rs
crates/aster_forge_metrics/: Cargo.toml
crates/aster_forge_metrics/src/: lib.rs  prometheus.rs
crates/aster_forge_panic/: Cargo.toml
crates/aster_forge_panic/src/: lib.rs
crates/aster_forge_runtime/: Cargo.toml
crates/aster_forge_runtime/src/: buffered.rs  component.rs  health.rs  lease.rs  lib.rs  lifecycle.rs  shutdown.rs  startup.rs
crates/aster_forge_storage_core/: Cargo.toml
crates/aster_forge_tasks/: Cargo.toml
crates/aster_forge_tasks/src/: component.rs  dedupe.rs  dispatch.rs  error.rs  execution.rs  heartbeat.rs  lease.rs  lib.rs  registry.rs  retry.rs  runtime.rs  runtime_metadata.rs  schedule.rs  spec.rs  steps.rs  temp.rs
crates/aster_forge_test/: Cargo.toml
crates/aster_forge_test/src/: lib.rs  mysql.rs  postgres.rs  process.rs  redis.rs  smtp.rs  state.rs  suite.rs  temp.rs  wait.rs
crates/aster_forge_utils/: Cargo.toml
crates/aster_forge_utils/src/: avatar.rs  backoff.rs  bool_like.rs  fs.rs  html.rs  http_range.rs  http_validators.rs  id.rs  lib.rs  net.rs  numbers.rs  paths.rs  raii.rs  text.rs  url.rs  xml.rs
crates/aster_forge_validation/: Cargo.toml
crates/aster_forge_webdav/: Cargo.toml
crates/aster_forge_webdav/src/: actix.rs  backend.rs  deltav.rs  event.rs  lib.rs  lock.rs  path.rs  property.rs  protocol.rs  put.rs  request.rs  resource.rs  response.rs  xml.rs  xml_response.rs
crates/aster_forge_webdav/tests/: actix.rs  backend.rs  deltav.rs  event.rs  lock.rs  property.rs  protocol.rs  put.rs  resource.rs  response.rs  xml.rs  xml_response.rs
crates/aster_forge_xml/: Cargo.toml
crates/aster_forge_xml/benches/: xml_bench.rs  xml_memory.rs
crates/aster_forge_xml/benches/support/: mod.rs
crates/aster_forge_xml/fuzz/: .gitignore  Cargo.toml
crates/aster_forge_xml/fuzz/fuzz_targets/: parse_stream.rs  writer_roundtrip.rs
crates/aster_forge_xml/src/: document.rs  error.rs  lib.rs  parser.rs  serializer.rs  stream.rs  syntax.rs  writer.rs
crates/aster_forge_xml/tests/: document.rs  property.proptest-regressions  property.rs  roxmltree_compat.rs  stream.rs  writer.rs  xml.rs  xmltree_compat.rs
developer-docs/: README.md
developer-docs/en/: README.md  mail-runtime.md
developer-docs/zh-CN/: README.md  mail-runtime.md
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/crates/: aster_forge_actix_middleware.md  aster_forge_actix_observability.md  aster_forge_alloc.md  aster_forge_api.md  aster_forge_api_docs_macros.md  aster_forge_audit.md  aster_forge_cache.md  aster_forge_config.md  aster_forge_crypto.md  aster_forge_db.md  (+15 more)
frontend-panel/: index.html  package.json  vite.config.ts
src/: errors.rs  lib.rs  main.rs
tests/: generate_openapi.rs  test_admin_tasks.rs  test_audit.rs  test_auth.rs  test_cache.rs  test_config.rs  test_database_backends.rs  test_errors.rs  test_examples.rs  test_external_auth.rs  test_health.rs  test_middleware.rs  test_system.rs
(+192 files in other folders)
