[package]
name = "aster_forge_actix_middleware"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
actix-web.workspace = true
aster_forge_metrics = { path = "../aster_forge_metrics" }
aster_forge_utils = { path = "../aster_forge_utils" }
base64.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
aster_forge_db = { path = "../aster_forge_db" }
sea-orm.workspace = true
