[package]
name = "aster_forge_actix_middleware"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
actix-governor.workspace = true
actix-web.workspace = true
aster_forge_metrics = { path = "../aster_forge_metrics", optional = true }
aster_forge_utils = { path = "../aster_forge_utils" }
base64.workspace = true
futures.workspace = true
governor.workspace = true
ipnet.workspace = true
rand.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[features]
default = []
metrics = ["dep:aster_forge_metrics"]

[dev-dependencies]
sea-orm.workspace = true
serde_json.workspace = true
