[package]
name = "aster_forge_actix_observability"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
prometheus = ["aster_forge_metrics/backend-prometheus"]

[dependencies]
actix-web.workspace = true
aster_forge_metrics = { path = "../aster_forge_metrics" }
tracing.workspace = true
