[package]
name = "aster_forge_api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
