[package]
name = "aster_forge_api_docs_macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
proc-macro = true

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
utoipa = { workspace = true, optional = true }
