[package]
name = "aster_forge_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = ["memory", "redis"]
memory = []
redis = ["memory", "dep:redis"]

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
moka.workspace = true
redis = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
testcontainers.workspace = true
