[package]
name = "aster_forge_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = ["memory"]
memory = []
redis = ["memory", "dep:redis"]
runtime-component = ["dep:aster_forge_runtime"]

[dependencies]
aster_forge_runtime = { path = "../aster_forge_runtime", optional = true }
async-trait.workspace = true
dashmap.workspace = true
moka.workspace = true
redis = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
testcontainers.workspace = true

[[test]]
name = "cache"
path = "tests/cache.rs"
required-features = ["memory"]
