[package]
name = "aster_forge_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]
redis-pubsub = ["dep:redis"]
sea-orm = ["dep:sea-orm"]

[dependencies]
async-trait.workspace = true
aster_forge_utils = { path = "../aster_forge_utils" }
futures.workspace = true
redis = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
