[package]
name = "aster_forge_crypto"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
argon2.workspace = true
rand_core_06.workspace = true
sha2.workspace = true
thiserror.workspace = true
