[package]
name = "aster_forge_db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aster_forge_mail = { path = "../aster_forge_mail" }
aster_forge_runtime = { path = "../aster_forge_runtime" }
aster_forge_tasks = { path = "../aster_forge_tasks" }
async-trait.workspace = true
chrono = { workspace = true, features = ["clock"] }
rand.workspace = true
sea-orm.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
uuid.workspace = true
