[package]
name = "aster_forge_events"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
redis = ["dep:redis"]

[dependencies]
async-trait.workspace = true
aster_forge_utils = { path = "../aster_forge_utils" }
futures.workspace = true
redis = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
aster_forge_test = { path = "../aster_forge_test", features = ["redis"] }
uuid.workspace = true

[[test]]
name = "redis_event_bus"
path = "tests/redis_event_bus.rs"
required-features = ["redis"]
