[package]
name = "aster_forge_file_classification"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
