[package]
name = "aster_forge_mail"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
aster_forge_utils = { path = "../aster_forge_utils" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
utoipa = { workspace = true, optional = true }
