[package]
name = "aster_forge_metrics"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aster_forge_db = { path = "../aster_forge_db" }
sea-orm.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
