[package]
name = "aster_forge_panic"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
chrono = { workspace = true, features = ["clock"] }

[dev-dependencies]
aster_forge_test = { path = "../aster_forge_test" }
