[package]
name = "aster_forge_runtime"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aster_forge_utils = { path = "../aster_forge_utils" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "signal", "time"] }
tokio-util.workspace = true
tracing.workspace = true
