[package]
name = "aster_forge_tasks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
chrono = { workspace = true, features = ["clock"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
utoipa = { workspace = true, optional = true }
