[package]
name = "aster_forge_tasks"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
aster_forge_runtime = { path = "../aster_forge_runtime" }
aster_forge_utils = { path = "../aster_forge_utils" }
async-trait.workspace = true
chrono = { workspace = true, features = ["clock"] }
futures.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
tokio-util.workspace = true
tracing.workspace = true
utoipa = { workspace = true, optional = true }
