[package]
name = "aster_forge_utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
http.workspace = true
ipnet.workspace = true
md-5.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "time"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
