[package]
name = "aster_forge_webdav"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[features]
default = []
actix = ["dep:actix-web"]

[dependencies]
actix-web = { workspace = true, optional = true }
aster_forge_utils = { path = "../aster_forge_utils" }
async-trait.workspace = true
bytes.workspace = true
chrono = { workspace = true, features = ["clock"] }
futures.workspace = true
http.workspace = true
percent-encoding.workspace = true
thiserror.workspace = true
urlencoding.workspace = true
xmltree.workspace = true
