[package]
name = "aster_forge_xml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
quick-xml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "xml_bench"
path = "benches/xml_bench.rs"
harness = false
