[package]
name = "aster_forge_xml"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
aster_forge_utils = { path = "../aster_forge_utils" }
quick-xml = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
libc = "0.2"
proptest = "1.11.0"
roxmltree = "0.21.1"
xmltree = "0.12.0"

[[bench]]
name = "xml_bench"
harness = false

[[bench]]
name = "xml_memory"
harness = false
